# django-perfy

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
background/: index.html
changelog/: index.html
configuration/: index.html
dashboard/: index.html
dashboard/api-performance/: index.html
dashboard/concepts/: index.html
dashboard/correlation/: index.html
dashboard/database-queries/: index.html
dashboard/overview/: index.html
dashboard/raw-logs/: index.html
dashboard/reports/: index.html
dashboard/system-resources/: index.html
dashboard/websocket/: index.html
dependencies/: index.html
django_perfy/: __init__.py  admin.py  apps.py  checks.py  collectors.py  email.py  middleware.py  mixins.py  models.py  router.py  tasks.py  urls.py  utils.py  views.py
django_perfy/dashboard/: jinja2_env.py  urls.py  views.py
django_perfy/management/commands/: performance_report.py  (+2 more)
django_perfy/migrations/: 0001_initial.py  0002_add_capture_fields.py  0003_delete_slowquerylog_and_more.py  0004_resync_performance_models.py  0005_delete_slowquerylog_and_more.py  0006_apirequestlog_request_headers_and_more.py  0007_apirequestlog_request_body_and_more.py
django_perfy/reports/: __init__.py  builders.py  charts.py  config.py  ranges.py  registry.py  renderer.py  tests.py  urls.py  views.py
docs/: background.md  changelog.md  configuration.md  dashboard-and-reports.md  dependencies.md  email.md  getting-started.md  index.md  installation.md  secondary-database.md  why-django-perfy.md
docs/dashboard/: api-performance.md  concepts.md  correlation.md  database-queries.md  index.md  overview.md  raw-logs.md  reports.md  system-resources.md  websocket.md
docs/features/: api-monitoring.md  dashboard-and-reports.md  index.md  resource-snapshots.md  websocket-monitoring.md
docs/guides/: celery-setup.md  index.md  secondary-database.md
docs/reference/: index.md  management-commands.md  settings.md
features/: index.html
features/api-monitoring/: index.html
features/dashboard-and-reports/: index.html
features/resource-snapshots/: index.html
features/websocket-monitoring/: index.html
getting-started/: index.html
guides/: index.html
guides/celery-setup/: index.html
guides/email/: index.html
guides/secondary-database/: index.html
installation/: index.html
reference/: index.html
reference/management-commands/: index.html
reference/settings/: index.html
scripts/: precommit_check_variable_naming.py
search/: search_index.json
tests/: settings.py  test_email.py  test_router.py  test_settings_defaults.py  urls.py
why-django-perfy/: index.html
(+19 files in other folders)
